Fix overflow issues

--- a/components/Features/Features.scss
+++ b/components/Features/Features.scss
@@ -3,6 +3,7 @@
 .Features {
   padding-top: 80px;
   padding-bottom: 150px;
+  overflow: hidden;
   background: linear-gradient(
     -3deg,
     #fff,
