--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,6 +1,7 @@
 @import '../variables.scss';
 
 .Main-header {
+  overflow: hidden;
   background: linear-gradient(
     -3deg,
     #fff,
